# startup-layout

./: Cargo.toml  Dioxus.toml  README.md
.github/workflows/: release.yml
src/: main.rs  models.rs  storage.rs  style.css
src/ui/: app.rs  mod.rs  preset_editor.rs  preset_list.rs
src/win/: mod.rs  monitor.rs  picker.rs  process.rs  window.rs
